soketi/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soketi
  namespace: youtubegaminglive
spec:
  selector:
    app: soketi
  type: ClusterIP
  ports:
  - name: websockets
    protocol: TCP
    port: 8084
    targetPort: 8084
